<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">SEOULLO</string>

    <!-- Sign In -->
    <string name="facebook_app_id">1411258448950016</string>
    <string name="fb_login_protocol_scheme">fb1411258448950016</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">회원가입 및 이메일 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>

    <!-- Bottom Navigation View -->
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>

    <!-- Account -->
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>

    <!-- Alarm -->
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">님이&#160;</string>

    <!-- Comment -->
    <string name="alarm_comment">&#160;메세지를 남겼습니다.</string>

    <!-- Add Photo -->
    <string name="alarm_follow">님이 당신의 계정을 팔로워하기 시작했습니다.</string>
    <string name="send">보내기</string>
    <string name="reply">댓글입력</string>
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용</string>

    <!-- Toolbar -->
    <string name="upload_success">업로드 성공</string>

    <!-- etc -->
    <string name="upload_fail">업로드 실패</string>
    <string name="back">Back</string>
    <string name="location">장소</string>
    <string name="text_location_title">장소</string>
    <string name="text_info_title">내용</string>
</resources>
