<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/account_iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/profile"
                tools:src="@drawable/ic_account" />

            <!-- Button -->
            <Button
                android:id="@+id/account_btn_follow_signout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/account_iv_profile"
                android:text="@string/follow"
                android:theme="@style/ButtonStyle" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/account_btn_follow_signout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/account_iv_profile"
                android:baselineAligned="true"
                android:gravity="center"
                android:orientation="horizontal">
                <!-- 1. 회원정보 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/account_iv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="안녕하세요~"
                        android:textStyle="bold" />

                </LinearLayout>
                <!-- 2. 게시물 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/post" />

                    <TextView
                        android:id="@+id/account_tv_post_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_0"
                        android:textStyle="bold" />
                </LinearLayout>



            </LinearLayout>

        </RelativeLayout>

        <!-- Recycler View -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/account_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</layout>
