<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.instagramclone.LoginActivity"
        android:background="@drawable/main_picture"
        >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/signin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:orientation="vertical">

            <!-- EditText - Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textColor="@color/colorNavIcon"
                android:layout_marginStart="20dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorNavIcon"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- EditText - Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorNavIcon"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Button -->
            <Button
                android:id="@+id/email_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="35dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:theme="@style/ButtonStyle"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorNavIcon"
                android:text="@string/signin_email"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0"
                />
            <!--
            <Button
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_signin_google"
                android:text="@string/signin_google"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_signin_facebook"
                android:text="@string/signin_facebook"
                android:textColor="@color/colorWhite" />
                -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/signin_layout">

            <ImageView
                android:id="@+id/image_logo"
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                />

        </LinearLayout>

    </RelativeLayout>
</layout>
