<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Tabs.AddPhotoActivity"
        >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

        <!-- Toolbar -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/toolbar_division"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_title"
                />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/toolbar_division"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/my_toolbar"
            android:layout_marginBottom="10dp"
            android:background="@color/colorDivision"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addphoto_image"
            />

        <!-- Contents -->
        <ImageView
            android:id="@+id/addphoto_image"
            android:layout_width="match_parent"
            android:layout_height="210dp"

            android:layout_alignParentStart="true"
            android:layout_below="@id/toolbar_division"
            android:layout_margin="20dp"
            android:src="@drawable/ic_addphoto"

            app:layout_constraintTop_toBottomOf="@id/toolbar_division"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editlocation"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/addphoto_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edittext"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="0dp"
            >
        <AutoCompleteTextView
            android:id="@+id/addphoto_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/location"
            android:inputType="text"
            android:textSize="15sp"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            app:layout_constraintTop_toBottomOf="@id/editlocation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addphoto_btn_upload"
            >

           <EditText
                android:id="@+id/addphoto_edit_explain"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="top"
                android:hint="@string/hint_image_content"
                android:inputType="text"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addphoto_btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/addphoto_image"
            android:text="@string/upload_image"
            android:theme="@style/ButtonStyle"

            app:layout_constraintTop_toBottomOf="@id/edittext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
